@@ -305,6 +305,22 @@ delete_off_map_ai_units = true
 ; that so they are displayed properly.
 fix_overlapping_specialist_yield_icons = true
 
+[======================]
+[=== LIMITS REMOVED ===]
+[======================]
+
+remove_unit_limit = true
+remove_city_improvement_limit = true
+
+; Increases the city limit to 2048 (from 512)
+lift_city_limit = true
+
+; Increases the cap on the game turn limit from 1000 to 1000000
+remove_cap_on_turn_limit = true
+
+; Be warned: the no era limit feature is incomplete, untested, and not likely to work at this time
+remove_era_limit = false
+
 [=========================]
 [=== ENGINE EXTENSIONS ===]
 [=========================]
@@ -334,9 +350,6 @@ limit_railroad_movement = false
 ; the limit_railroad_movement setting above. If that setting is false or <= 0, this option does nothing.
 limited_railroads_work_like_fast_roads = false
 
-remove_unit_limit = true
-remove_city_improvement_limit = true
-
 ; This option lets you put a limit on how many units may occupy each tile. The limit applies separately for land, sea, and air units. You may set the
 ; limit differently for each of those classes by setting this option to a list of three numbers. If you set it to a single number, that limit amount
 ; will apply to all three. If you set it to false or a number <= 0, no limit will apply, as in the base game. Some examples:
@@ -350,12 +363,6 @@ limit_units_per_tile = false
 ; Allows an unlimited number of units to occupy tiles with cities when the unit limit is in force. When the limit (option above) is deactivated, this
 ; option does nothing.
 exclude_cities_from_units_per_tile_limit = false
-
-; Be warned: the no era limit feature is incomplete, untested, and not likely to work at this time
-remove_era_limit = false
-
-; Increases the cap on the game turn limit from 1000 to 1000000
-remove_cap_on_turn_limit = true
 
 enable_free_buildings_from_small_wonders = true
 allow_stealth_attack_against_single_unit = false
@@ -704,14 +711,6 @@ rebase_range_multiplier = 6
 ; option is to make the galley chaining exploit impossible.
 limit_unit_loading_to_one_transport_per_turn = false
 
-; This option moves the game's trade net object to a different location in the program's memory. The trade net object is responsible for pathfinding
-; and computing trade connections among cities. Its location shouldn't affect its operation; if this option works correctly, it will have no visible
-; effects on the game whether it's on or off. If it doesn't work correctly, it is likely to cause crashes. For that reason, it's left off by
-; default. The reason this option is even offered is that moving the trade net object is the first step of lifting the game's city limit, so it is for
-; now an experimental first step in that direction. If you turn this option on to help test it, make sure to report any crashes or strange behavior in
-; the C3X mod thread.
-move_trade_net_object = false
-
 ; In the base game, if you set Cavalry to upgrade to Tank but don't give it the upgrade ability, intending to make Cavalry obsolete when Tanks become
 ; available but not upgradable to them, you'll be left with the strange situation that older units such as Knights are allowed to upgrade to Tanks
 ; even though Cavalry are not. This option makes it so that Knights upgrade to Cavalry in that case. In general, it makes it so that upgrade chains
@@ -722,7 +721,7 @@ move_trade_net_object = false
 prevent_old_units_from_upgrading_past_ability_block = false
 
 [=======================]
-[=== Day/Night Cycle ===]
+[=== DAY/NIGHT CYCLE ===]
 [=======================]
 
 ; How the day/night cycle operates in the game. If enabled, terrain, cities, resources, landmarks and terrain buildings will change appearance based on 
@@ -745,4 +744,3 @@ fixed_hours_per_turn_for_day_night_cycle = 1
 
 ; If day_night_cycle_mode is set to 'specified', the hour of the day to pin the cycle to. This should be a value between 0 (midnight) and 23 (11pm) inclusive.
 pinned_hour_for_day_night_cycle = 0
-
